# haybox-debugger

./: README.md  build.bat  components.json  dev.bat  package-lock.json  package.json  tsconfig.app.json  unused_tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: index.css
src/components/ui/button/: Button.vue  index.ts
